[package]
name = "vangelis"
version = "2.0.1"
edition = "2021"
license = "MIT"
description = "A functional testing framework"
authors = ["Martin Olivier <martin.olivier@live.fr>"]
homepage = "https://github.com/martin-olivier/vangelis"
repository = "https://github.com/martin-olivier/vangelis"
documentation = "https://github.com/martin-olivier/vangelis"
keywords = ["testing", "test", "config", "command", "process"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["/.github", "/examples"]
readme = "README.md"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.159", features = ["derive"] }
indexmap = { version = "1.9.3", features = ["serde-1"] }
term_size = "0.3.2"
colored = "2.0.0"
toml = "0.7.3"
diff = "0.1.13"
atty = "0.2.14"
ctrlc = "3.2.5"

[package.metadata.deb]
copyright = "2023, Martin Olivier"
maintainer = "Martin Olivier <martin.olivier@live.fr>"
license-file = ["LICENSE"]
extended-description = """
This software takes test files as parameter that contains lists of commands to be run,
expected stdout, stderr, exit status, and tell the user if the tests succeed,
failed or crashed.
"""
priority = "optional"
section = "utility"
assets = [
    ["target/release/vangelis", "/usr/bin/vangelis", "755"],
    ["README.md", "/usr/share/doc/vangelis/README", "644"],
]
