[package]
name = "vangelis"
version = "2.0.2"
edition = "2021"
license = "MIT"
description = "A functional testing framework"
authors = ["Martin Olivier <martin.olivier@live.fr>"]
homepage = "https://github.com/martin-olivier/vangelis"
repository = "https://github.com/martin-olivier/vangelis"
documentation = "https://github.com/martin-olivier/vangelis"
keywords = ["testing", "test", "config", "command", "process"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["/.github", "/examples"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
term_size = "0.3"
colored = "2"
toml = "0.8"
diff = "0.1"
atty = "0.2"
ctrlc = "3.4"
